// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class: WcScope > run > captures metrics for workspace files when instrumented package is installed by root package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "460da73f7e63aeb72106788158261156d165376633de24e4a6673122ce2470aa",
                  "npm.dependency.instrumented.raw": "460da73f7e63aeb72106788158261156d165376633de24e4a6673122ce2470aa",
                  "npm.dependency.instrumented.version.major": "1",
                  "npm.dependency.instrumented.version.minor": "0",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "92521fc3cbd964bdc9f584a991b89fddaa5754ed1cc96d6d42445338669c1305",
                  "wc.element.attributes.names": [
                    "firstProp",
                    "[redacted7]",
                    "[redacted9]",
                  ],
                  "wc.element.attributes.values": [
                    "[redacted6]",
                    "[redacted8]",
                    "[redacted10]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.importSource": "npm",
                  "wc.element.module.specifier": "instrumented-top-level",
                  "wc.element.name": "PackageComp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: WcScope > run > captures metrics when instrumented package is installed in intermediate package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "1",
                  "npm.dependency.instrumented.version.minor": "0",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "92521fc3cbd964bdc9f584a991b89fddaa5754ed1cc96d6d42445338669c1305",
                  "wc.element.attributes.names": [
                    "firstProp",
                    "[redacted7]",
                    "[redacted9]",
                  ],
                  "wc.element.attributes.values": [
                    "[redacted6]",
                    "[redacted8]",
                    "[redacted10]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.importSource": "npm",
                  "wc.element.module.specifier": "instrumented",
                  "wc.element.name": "PackageComp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: WcScope > run > correctly captures metric data for wc elements imported through a CDN 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "42e6f853e8f0a88976bf920d8e3538bf451f94631104b115d9ecf46e52d441f3",
                  "npm.dependency.instrumented.owner": "0fcb80b945f24dcf6154642421ec704bdd967d880e42d338cabce855bb334e26",
                  "npm.dependency.instrumented.raw": "6896bea85c8c0cf45abc7cb1cd7aa0d73c01661b3974f4c08120f9e9ce485eb3",
                  "npm.dependency.instrumented.version.major": "2",
                  "npm.dependency.instrumented.version.minor": "35",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "79b333613f126c3684f8f60577892f1b343d59afdf4b7d3ca63a7915b289af27",
                  "wc.element.attributes.names": [
                    "first",
                    "second",
                    "third",
                    "[redacted3]",
                  ],
                  "wc.element.attributes.values": [
                    "hi",
                    "[redacted2]",
                    "wow",
                    "[redacted1]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.importSource": "cdn",
                  "wc.element.module.specifier": "@carbon/web-components",
                  "wc.element.name": "cds-tag",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "42e6f853e8f0a88976bf920d8e3538bf451f94631104b115d9ecf46e52d441f3",
                  "npm.dependency.instrumented.owner": "0fcb80b945f24dcf6154642421ec704bdd967d880e42d338cabce855bb334e26",
                  "npm.dependency.instrumented.raw": "6896bea85c8c0cf45abc7cb1cd7aa0d73c01661b3974f4c08120f9e9ce485eb3",
                  "npm.dependency.instrumented.version.raw": "v2/latest",
                  "wc.element.attributes.names": [
                    "first",
                    "second",
                    "third",
                    "[redacted3]",
                  ],
                  "wc.element.attributes.values": [
                    "hi",
                    "[redacted2]",
                    "wow",
                    "[redacted1]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.importSource": "cdn",
                  "wc.element.module.specifier": "@carbon/web-components",
                  "wc.element.name": "cds-code-snippet",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: WcScope > run > correctly captures metric data for wc elements imported through a JsImport 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "0",
                  "npm.dependency.instrumented.version.minor": "1",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "6ad9613a455798d6d92e5f5f390ab4baa70596bc869ed6b17f5cdd2b28635f06",
                  "wc.element.attributes.names": [
                    "firstProp",
                    "secondProp",
                    "[redacted1]",
                  ],
                  "wc.element.attributes.values": [
                    "hi",
                    "wow",
                    "[redacted1]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.importSource": "npm",
                  "wc.element.module.specifier": "instrumented",
                  "wc.element.name": "ImaginaryThing",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "0",
                  "npm.dependency.instrumented.version.minor": "1",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "6ad9613a455798d6d92e5f5f390ab4baa70596bc869ed6b17f5cdd2b28635f06",
                  "wc.element.attributes.names": [
                    "first",
                    "second",
                    "third",
                    "[redacted3]",
                  ],
                  "wc.element.attributes.values": [
                    "hi",
                    "[redacted2]",
                    "wow",
                    "[redacted1]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.importSource": "npm",
                  "wc.element.module.specifier": "instrumented",
                  "wc.element.name": "accordion",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;
